--- a/wp-content/languages/da_DK.po
+++ b/wp-content/languages/da_DK.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Development package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2015-04-22 19:04:54+0000\n"
+"PO-Revision-Date: 2015-05-26 18:34:01+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2993,7 +2993,7 @@ msgstr "Webstedets titel og beskrivelse"
 #: wp-includes/formatting.php:2667 wp-includes/script-loader.php:379
 msgctxt "word count: words or characters?"
 msgid "words"
-msgstr "ord"
+msgstr "words"
 
 #: wp-includes/class-wp-xmlrpc-server.php:1180
 #: wp-includes/class-wp-xmlrpc-server.php:4714
