--- a/wp-content/languages/themes/twentysixteen-da_DK.po
+++ b/wp-content/languages/themes/twentysixteen-da_DK.po
@@ -2,7 +2,7 @@
 # This file is distributed under the same license as the Twenty Sixteen package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2015-12-07 12:30:15+0000\n"
+"PO-Revision-Date: 2015-12-11 09:57:57+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,9 +14,31 @@ msgstr ""
 msgid "Twenty Sixteen"
 msgstr "Twenty Sixteen"
 
+#. Description of the plugin/theme
+msgid "Twenty Sixteen is a modernized take on an ever-popular WordPress layout — the horizontal masthead with an optional right sidebar that works perfectly for blogs and websites. It has custom color options with beautiful default color schemes, a harmonious fluid grid using a mobile-first approach, and impeccable polish in every detail. Twenty Sixteen will make your WordPress look beautiful everywhere."
+msgstr "Twenty Sixteen er en moderniseret udgave af et evigt populært WordPress-layout - det vandrette sidehoved med en valgfri højre sidekolonne, der fungerer perfekt til brug for blogs og hjemmesider. Temaet har valgfrie farver med flotte standardfarvepaletter, et harmonisk flydende blokgitter med fokus på mobiltilgang, og en upåklagelig finish i alle detaljer. Twenty Sixteen får din WordPress til at tage sig smukt ud i alle sammenhænge."
+
+#. translators: %s: Name of current post
+#: image.php:84 template-parts/content-page.php:37
+#: template-parts/content-search.php:28 template-parts/content-search.php:43
+#: template-parts/content-single.php:45 template-parts/content.php:49
+msgid "Edit<span class=\"screen-reader-text\"> \"%s\"</span>"
+msgstr "Rediger <span class=\"screen-reader-text\"> \"%s\"</span>"
+
+#. translators: %s: Name of current post
+#: inc/template-tags.php:184 template-parts/content.php:28
+msgid "Continue reading<span class=\"screen-reader-text\"> \"%s\"</span>"
+msgstr "Læs videre<span class=\"screen-reader-text\"> \"%s\"</span>"
+
 #: inc/customizer.php:246
 msgid "Red"
 msgstr "Rød"
+
+#. translators: %s: post title
+#: comments.php:31
+msgctxt "comments title"
+msgid "One thought on &ldquo;%s&rdquo;"
+msgstr "Her tænker du på &ldquo;%s&rdquo;"
 
 #: searchform.php:16
 msgctxt "submit button"
@@ -33,6 +55,14 @@ msgctxt "label"
 msgid "Search for:"
 msgstr "Søg efter:"
 
+#: footer.php:17
+msgid "Footer Primary Menu"
+msgstr "Footer, Primær menu"
+
+#: footer.php:28
+msgid "Footer Social Links Menu"
+msgstr "Footer, Sociale Links Menu"
+
 #: functions.php:144
 msgid "Add widgets here to appear in your sidebar."
 msgstr "Tilføj widgets her for at vise dem i din sidebar."
@@ -43,11 +73,11 @@ msgstr "Udvalgt"
 
 #: template-parts/content-none.php:28
 msgid "It seems we can&rsquo;t find what you&rsquo;re looking for. Perhaps searching can help."
-msgstr "Det ser ud til, at vi ikke kan finde det, du leder efter. Måske vil en søgning hjælpe."
+msgstr "Vi kan vist ikke finde, hvad du leder efter. Måske vil en søgning hjælpe?"
 
 #: template-parts/content-none.php:23
 msgid "Sorry, but nothing matched your search terms. Please try again with some different keywords."
-msgstr "Beklager, men din søgning gav ingen resultater. Prøv igen med nogle andre søgeord."
+msgstr "Beklager, men din søgning gav intet resultat. Forsøg igen med andre søgeord."
 
 #: template-parts/content-none.php:19
 msgid "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
@@ -63,7 +93,7 @@ msgstr "Vis alle indlæg fra %s"
 
 #: template-parts/biography.php:28
 msgid "Author:"
-msgstr "Forfatter"
+msgstr "Forfatter:"
 
 #: single.php:38
 msgid "Previous post:"
@@ -103,7 +133,7 @@ msgstr ", "
 #: inc/template-tags.php:79
 msgctxt "Used before publish date."
 msgid "Posted on"
-msgstr "Udgivet i"
+msgstr "Udgivet "
 
 #: inc/template-tags.php:38
 msgctxt "Used before post format."
@@ -135,9 +165,21 @@ msgstr "Mørk"
 msgid "Default"
 msgstr "Standard"
 
+#: inc/customizer.php:159
+msgid "Main Text Color"
+msgstr "Primær tekstfarve"
+
+#: inc/customizer.php:171
+msgid "Secondary Text Color"
+msgstr "Sekundær tekstfarve"
+
 #: inc/customizer.php:147
 msgid "Link Color"
 msgstr "Linkfarve"
+
+#: inc/customizer.php:132
+msgid "Page Background Color"
+msgstr "Side baggrundsfarve"
 
 #: image.php:102 single.php:29
 msgctxt "Parent post link"
@@ -146,12 +188,16 @@ msgstr "<span class=\"meta-nav\">Udgivet i</span><span class=\"post-title\">%tit
 
 #: inc/customizer.php:117
 msgid "Base Color Scheme"
-msgstr "Basis farveskema"
+msgstr "Grundfarver"
+
+#: inc/back-compat.php:41 inc/back-compat.php:53 inc/back-compat.php:68
+msgid "Twenty Sixteen requires at least WordPress version 4.4. You are running version %s. Please upgrade and try again."
+msgstr "Twenty Sixteen behøver minimum WordPress version 4.4. Du anvender version %s. Opgrader venligst og forsøg igen."
 
 #: image.php:73
 msgctxt "Used before full size attachment link."
 msgid "Full size"
-msgstr "Original størrelse"
+msgstr "Faktisk størrelse"
 
 #: image.php:56 template-parts/content-page.php:23
 #: template-parts/content-single.php:25 template-parts/content.php:33
@@ -182,6 +228,34 @@ msgstr "udvid undermenu"
 msgid "collapse child menu"
 msgstr "skjul undermenu"
 
+#: functions.php:154 functions.php:164
+msgid "Appears at the bottom of the content on posts and pages."
+msgstr "Dukker op i bunden af indholdsdelen i indlæg og på sider."
+
+#. translators: If there are characters in your language that are not supported
+#. by Montserrat, translate this to 'off'. Do not translate into your own
+#. language.
+#: functions.php:194
+msgctxt "Montserrat font: on or off"
+msgid "on"
+msgstr "on"
+
+#. translators: If there are characters in your language that are not supported
+#. by Merriweather, translate this to 'off'. Do not translate into your own
+#. language.
+#: functions.php:189
+msgctxt "Merriweather font: on or off"
+msgid "on"
+msgstr "on"
+
+#: functions.php:152
+msgid "Content Bottom 1"
+msgstr "Indhold i bunden 2"
+
+#: functions.php:162
+msgid "Content Bottom 2"
+msgstr "Indhold i bunden 2"
+
 #. translators: If there are characters in your language that are not supported
 #. by Inconsolata, translate this to 'off'. Do not translate into your own
 #. language.
@@ -210,6 +284,14 @@ msgstr "Drevet af %s"
 msgid "Comments are closed."
 msgstr "Lukket for kommentarer."
 
+#. translators: 1: number of comments, 2: post title
+#: comments.php:35
+msgctxt "comments title"
+msgid "%1$s thought on &ldquo;%2$s&rdquo;"
+msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
+msgstr[0] "En mening om &ldquo;%2$s&rdquo;"
+msgstr[1] "%1$s meninger om &ldquo;%2$s&rdquo;"
+
 #: archive.php:51 image.php:60 index.php:48 search.php:39
 #: template-parts/content-page.php:27 template-parts/content-single.php:29
 #: template-parts/content.php:37
@@ -236,7 +318,11 @@ msgstr "Hov! Den side findes ikke."
 msgid "the WordPress team"
 msgstr "WordPress-holdet"
 
-#. #-#-#-#-#  twentysixteen.pot (Twenty Sixteen 1.0)  #-#-#-#-#
+#. Theme URI of the plugin/theme
+msgid "https://wordpress.org/themes/twentysixteen/"
+msgstr "https://wordpress.org/themes/twentysixteen/"
+
+#. #-#-#-#-#  twentysixteen.pot (Twenty Sixteen 1.1)  #-#-#-#-#
 #. Author URI of the plugin/theme
 #: footer.php:51
 msgid "https://wordpress.org/"
